--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <name>generator</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    <dependency>
+ <!--   <dependency>
     <groupId>com.googlecode.rapid-framework</groupId>
     <artifactId>rapid-core</artifactId>
     <version>4.0.5</version>
@@ -18,11 +18,11 @@
     <groupId>com.googlecode.rapid-framework</groupId>
     <artifactId>rapid-generator</artifactId>
     <version>4.0.5</version>
-  </dependency>
+  </dependency>-->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
