--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     </dependency>
   </dependencies>
 
-  <build>
+<!--  <build>
     <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -36,7 +36,7 @@
               <configuration>
                   <mainClass>com.threadblocked.CodeGenerator</mainClass>
                   <arguments>
-                      <!--这里的参数传要进行建模的表-->
+                      &lt;!&ndash;这里的参数传要进行建模的表&ndash;&gt;
                       <argument>navigate_category</argument>
                       <argument>navigate_item</argument>
                   </arguments>
@@ -45,5 +45,5 @@
         </executions>
       </plugin>
     </plugins>
-  </build>
+  </build>-->
 </project>
