--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,26 @@
   <version>1.0-SNAPSHOT</version>
   <name>generator</name>
   <url>http://maven.apache.org</url>
+
+    <properties>
+        <jdbc.driver.groupId>com.microsoft.sqlserver</jdbc.driver.groupId>
+        <jdbc.driver.artifactId>sqljdbc4</jdbc.driver.artifactId>
+        <jdbc.driver.version>4.0</jdbc.driver.version>
+    </properties>
+    <repositories>
+
+        <repository>
+            <id>zhiyou-releases</id>
+            <name>Zhiyou Private Nexus Releases Repository</name>
+            <url>http://42.96.203.226:7071/nexus/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
   <dependencies>
     <dependency>
         <groupId>com.googlecode.rapid-framework</groupId>
@@ -19,9 +39,14 @@
         <version>4.12</version>
         <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>${jdbc.driver.groupId}</groupId>
+          <artifactId>${jdbc.driver.artifactId}</artifactId>
+          <version>${jdbc.driver.version}</version>
+      </dependency>
   </dependencies>
 
-<!--  <build>
+ <build>
     <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -36,7 +61,6 @@
               <configuration>
                   <mainClass>com.threadblocked.CodeGenerator</mainClass>
                   <arguments>
-                      &lt;!&ndash;这里的参数传要进行建模的表&ndash;&gt;
                       <argument>navigate_category</argument>
                       <argument>navigate_item</argument>
                   </arguments>
@@ -45,5 +69,5 @@
         </executions>
       </plugin>
     </plugins>
-  </build>-->
+  </build>
 </project>
